syntax="proto3";
package grpc.health.v1;

// proto spec for the heartbeat
message HeartbeatMsg {
    string serviceName = 1;
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 2;
}

// A generic empty message that you can re-use to avoid defining duplicated empty messages in your APIs.
message Empty { }

// grpc method which will be xposed as service
service Heartbeat {
    rpc check (Empty) returns(HeartbeatMsg) {}
}